@@ -26,13 +26,14 @@ import org.ovirt.engine.core.common.businessentities.ArchitectureType;
 import org.ovirt.engine.core.common.businessentities.BiosType;
 import org.ovirt.engine.core.common.businessentities.ChipsetType;
 import org.ovirt.engine.core.common.businessentities.DisplayType;
+import org.ovirt.engine.core.common.businessentities.Entities;
 import org.ovirt.engine.core.common.businessentities.GraphicsInfo;
 import org.ovirt.engine.core.common.businessentities.GraphicsType;
 import org.ovirt.engine.core.common.businessentities.HostDevice;
 import org.ovirt.engine.core.common.businessentities.HugePage;
-import org.ovirt.engine.core.common.businessentities.NumaTuneMode;
 import org.ovirt.engine.core.common.businessentities.OriginType;
 import org.ovirt.engine.core.common.businessentities.VM;
+import org.ovirt.engine.core.common.businessentities.VdsDynamic;
 import org.ovirt.engine.core.common.businessentities.VdsNumaNode;
 import org.ovirt.engine.core.common.businessentities.VdsStatistics;
 import org.ovirt.engine.core.common.businessentities.VgpuPlacement;
@@ -42,7 +43,6 @@ import org.ovirt.engine.core.common.businessentities.VmDeviceId;
 import org.ovirt.engine.core.common.businessentities.VmHostDevice;
 import org.ovirt.engine.core.common.businessentities.VmNumaNode;
 import org.ovirt.engine.core.common.businessentities.VmPayload;
-import org.ovirt.engine.core.common.businessentities.VmType;
 import org.ovirt.engine.core.common.businessentities.network.Network;
 import org.ovirt.engine.core.common.businessentities.network.NetworkFilter;
 import org.ovirt.engine.core.common.businessentities.network.VmInterfaceType;
@@ -64,8 +64,8 @@ import org.ovirt.engine.core.common.businessentities.storage.VolumeFormat;
 import org.ovirt.engine.core.common.config.Config;
 import org.ovirt.engine.core.common.config.ConfigValues;
 import org.ovirt.engine.core.common.utils.HugePageUtils;
+import org.ovirt.engine.core.common.utils.MDevTypesUtils;
 import org.ovirt.engine.core.common.utils.Pair;
-import org.ovirt.engine.core.common.utils.VmCpuCountHelper;
 import org.ovirt.engine.core.common.utils.VmDeviceCommonUtils;
 import org.ovirt.engine.core.common.utils.VmDeviceType;
 import org.ovirt.engine.core.common.utils.customprop.VmPropertiesUtils;
@@ -114,8 +114,8 @@ public class LibvirtVmXmlBuilder {
             "main", "display", "inputs", "cursor", "playback", "record", "smartcard", "usbredir"));
     private static final String SCSI_HD = "scsi_hd";
     private static final String SCSI_BLOCK = "scsi_block";
-    private static final String SCSI_VIRTIO_BLK_PCI = "virtio_blk_pci";
-    private static final List<String> scsiHostDevDrivers = Arrays.asList(SCSI_HD, SCSI_BLOCK, SCSI_VIRTIO_BLK_PCI);
+    public static final String SCSI_VIRTIO_BLK_PCI = "virtio_blk_pci";
+    public static final List<String> SCSI_HOST_DEV_DRIVERS = Arrays.asList(SCSI_HD, SCSI_BLOCK, SCSI_VIRTIO_BLK_PCI);
 
     private VmInfoBuildUtils vmInfoBuildUtils;
 
@@ -131,6 +131,7 @@ public class LibvirtVmXmlBuilder {
     private boolean volatileRun;
     private Map<Guid, String> passthroughVnicToVfMap;
     private Map<String, String> vmCustomProperties;
+    private boolean legacyVirtio;
 
     private VM vm;
     private int vdsCpuThreads;
@@ -141,7 +142,9 @@ public class LibvirtVmXmlBuilder {
     private MemoizingSupplier<VgpuPlacement> hostVgpuPlacementSupplier;
     private MemoizingSupplier<String> tscFrequencySupplier;
     private MemoizingSupplier<String> cpuFlagsSupplier;
+    private MemoizingSupplier<String> cpuModelSupplier;
     private MemoizingSupplier<Boolean> incrementalBackupSupplier;
+    private MemoizingSupplier<Boolean> kernelFipsModeSupplier;
 
     private Map<String, Map<String, Object>> vnicMetadata;
     private Map<String, Map<String, String>> diskMetadata;
@@ -245,20 +248,26 @@ public class LibvirtVmXmlBuilder {
             hostStatisticsSupplier = new MemoizingSupplier<>(() -> vmInfoBuildUtils.getVdsStatistics(hostId));
             hostNumaNodesSupplier = new MemoizingSupplier<>(() -> vmInfoBuildUtils.getVdsNumaNodes(hostId));
             hostVgpuPlacementSupplier = new MemoizingSupplier<>(() -> vmInfoBuildUtils.vgpuPlacement(hostId));
-            tscFrequencySupplier = new MemoizingSupplier<>(() -> vmInfoBuildUtils.getTscFrequency(hostId));
-            cpuFlagsSupplier = new MemoizingSupplier<>(() -> vmInfoBuildUtils.getCpuFlags(hostId));
-            incrementalBackupSupplier = new MemoizingSupplier<>(() -> vmInfoBuildUtils.isHostIncrementalBackupEnabled(hostId));
+            VdsDynamic vds = vmInfoBuildUtils.getVdsDynamic(hostId);
+            tscFrequencySupplier = new MemoizingSupplier<>(() -> vds.getTscFrequency());
+            cpuFlagsSupplier = new MemoizingSupplier<>(() -> vds.getCpuFlags());
+            cpuModelSupplier = new MemoizingSupplier<>(() -> vds.getCpuModel());
+            incrementalBackupSupplier = new MemoizingSupplier<>(() -> vds.isBackupEnabled());
+            kernelFipsModeSupplier = new MemoizingSupplier<>(() -> vmInfoBuildUtils.isKernelFipsMode(vds));
         } else {
             hostDevicesSupplier = new MemoizingSupplier<>(() -> Collections.emptyMap());
             hostStatisticsSupplier = new MemoizingSupplier<>(() -> null);
             hostNumaNodesSupplier = new MemoizingSupplier<>(() -> Collections.emptyList());
             hostVgpuPlacementSupplier = new MemoizingSupplier<>(() -> null);
-            tscFrequencySupplier = new MemoizingSupplier<>(() -> "");
+            tscFrequencySupplier = new MemoizingSupplier<>(() -> null);
             cpuFlagsSupplier = new MemoizingSupplier<>(() -> "");
+            cpuModelSupplier = new MemoizingSupplier<>(() -> "");
             incrementalBackupSupplier = new MemoizingSupplier<>(() -> false);
+            kernelFipsModeSupplier = new MemoizingSupplier<>(() -> false);
         }
         vmNumaNodesSupplier = new MemoizingSupplier<>(() -> vmInfoBuildUtils.getVmNumaNodes(vm));
-        mdevDisplayOn = isMdevDisplayOn(vmCustomProperties, vm);
+        mdevDisplayOn = MDevTypesUtils.isMdevDisplayOn(vm);
+        legacyVirtio = vmInfoBuildUtils.isLegacyVirtio(vm.getVmOsId(), ChipsetType.fromMachineType(emulatedMachine));
     }
 
     public String buildCreateVm() {
@@ -371,24 +380,25 @@ public class LibvirtVmXmlBuilder {
     }
 
     private void writeMaxMemory() {
+        Long nvdimmSize = vmInfoBuildUtils.getNvdimmTotalSize(vm, hostDevicesSupplier);
+
         if (!FeatureSupported.hotPlugMemory(vm.getCompatibilityVersion(), vm.getClusterArch())
                 // the next check is because QEMU fails if memory and maxMemory are the same
-                || vm.getVmMemSizeMb() == vm.getMaxMemorySizeMb()) {
+                || (vm.getVmMemSizeMb() == vm.getMaxMemorySizeMb()) && nvdimmSize == 0) {
                 return;
         }
 
+        long maxMemory = (long) vm.getMaxMemorySizeMb() * 1024 + nvdimmSize / 1024;
         writer.writeStartElement("maxMemory");
         writer.writeAttributeString("slots", Config.getValue(ConfigValues.MaxMemorySlots).toString());
-        writer.writeRaw(String.valueOf((long) vm.getMaxMemorySizeMb() * 1024));
+        writer.writeRaw(String.valueOf(maxMemory));
         writer.writeEndElement();
     }
 
     private void writevCpu() {
         writer.writeStartElement("vcpu");
         writer.writeAttributeString("current", String.valueOf(vm.getNumOfCpus()));
-        writer.writeRaw(FeatureSupported.supportedInConfig(ConfigValues.HotPlugCpuSupported, vm.getCompatibilityVersion(), vm.getClusterArch()) ?
-                VmCpuCountHelper.calcMaxVCpu(vm, vm.getClusterCompatibilityVersion()).toString()
-                : String.valueOf(vm.getNumOfCpus()));
+        writer.writeRaw(String.valueOf(VmInfoBuildUtils.maxNumberOfVcpus(vm)));
         writer.writeEndElement();
     }
 
@@ -400,8 +410,21 @@ public class LibvirtVmXmlBuilder {
         if (vm.isUseHostCpuFlags()){
             cpuType = "hostPassthrough";
         }
-        if (vm.getUseTscFrequency()) {
+        if (vm.getUseTscFrequency() && tscFrequencySupplier.get() != null) {
             cpuType += ",+invtsc";
+        }
+
+        // Work around for https://bugzilla.redhat.com/1689362
+        // If it is a nested VM on AMD EPYC, monitor feature must be
+        // disabled manually, until libvirt is fixed.
+        if (cpuModelSupplier.get() != null && cpuModelSupplier.get().contains("AMD EPYC") &&
+                cpuFlagsSupplier.get() != null && !cpuFlagsSupplier.get().contains("monitor")) {
+            cpuType += ",-monitor";
+        }
+
+        String cpuFlagsProperty = vmCustomProperties.get("extra_cpu_flags");
+        if (StringUtils.isNotEmpty(cpuFlagsProperty)) {
+            cpuType += "," + cpuFlagsProperty;
         }
 
         String[] typeAndFlags = cpuType.split(",");
@@ -438,9 +461,7 @@ public class LibvirtVmXmlBuilder {
             writer.writeStartElement("topology");
             writer.writeAttributeString("cores", Integer.toString(vm.getCpuPerSocket()));
             writer.writeAttributeString("threads", Integer.toString(vm.getThreadsPerCpu()));
-            int vcpus = FeatureSupported.supportedInConfig(ConfigValues.HotPlugCpuSupported, vm.getCompatibilityVersion(), vm.getClusterArch()) ?
-                    VmCpuCountHelper.calcMaxVCpu(vm, vm.getClusterCompatibilityVersion())
-                    : vm.getNumOfCpus();
+            int vcpus = VmInfoBuildUtils.maxNumberOfVcpus(vm);
             writer.writeAttributeString("sockets", String.valueOf(vcpus / vm.getCpuPerSocket() / vm.getThreadsPerCpu()));
             writer.writeEndElement();
         }
@@ -539,8 +560,8 @@ public class LibvirtVmXmlBuilder {
         final String product = Config.getValue(ConfigValues.OriginType);
         final String manufacturer = OriginType.valueOf(product) == OriginType.OVIRT ? "oVirt" : "Red Hat";
         final String productName = OriginType.valueOf(product) == OriginType.OVIRT ? "oVirt" : "RHV";
-        boolean skuToAVLevelExists = Config.valueExists(ConfigValues.SkuToAVLevel, vm.getCompatibilityVersion().toString())
-                && StringUtils.isNotEmpty(Config.getValue(ConfigValues.SkuToAVLevel, vm.getCompatibilityVersion().toString()));
+        boolean skuToAVLevelExists = StringUtils.isNotEmpty(
+                Config.getValue(ConfigValues.SkuToAVLevel, vm.getCompatibilityVersion().toString()));
         boolean version4_4orHigher = vm.getClusterCompatibilityVersion().greaterOrEquals(Version.v4_4);
 
         writer.writeStartElement("sysinfo");
@@ -556,7 +577,7 @@ public class LibvirtVmXmlBuilder {
                 writeEntryElement("sku", Config.getValue(ConfigValues.SkuToAVLevel, vm.getCompatibilityVersion().toString()));
             }
         }
-        writeEntryElement("serial", "HOST-SERIAL:");
+        writeEntryElement("serial", vmInfoBuildUtils.getVmSerialNumber(vm, "HOST-SERIAL:"));
         writeEntryElement("uuid", vm.getId().toString());
         writer.writeEndElement(); // system
 
@@ -576,23 +597,25 @@ public class LibvirtVmXmlBuilder {
         writer.writeEndElement();
     }
 
-    private void writeNumaTune() {
-        NumaTuneMode numaTune = vm.getNumaTuneMode();
-        if (numaTune == null) {
-            return;
-        }
-
+    private Map<String, Object> getNumaTuneSetting() {
         Map<String, Object> numaTuneSetting = NumaSettingFactory.buildVmNumatuneSetting(
-                numaTune,
                 vmNumaNodesSupplier.get());
         if (numaTuneSetting.isEmpty()) {
+            return null;
+        }
+
+        return numaTuneSetting;
+    }
+
+    private void writeNumaTune() {
+        Map<String, Object> numaTuneSetting = getNumaTuneSetting();
+        if (numaTuneSetting == null) {
             return;
         }
 
         // <numatune>
         //   <memnode cellid='0' mode='strict' nodeset='1'>
         // </numatune>
-        String mode = (String) numaTuneSetting.get(VdsProperties.NUMA_TUNE_MODE);
         @SuppressWarnings("unchecked")
         List<Map<String, String>> memNodes = (List<Map<String, String>>) numaTuneSetting.get(VdsProperties.NUMA_TUNE_MEMNODES);
         if (memNodes != null) {
@@ -600,9 +623,9 @@ public class LibvirtVmXmlBuilder {
 
             for (Map<String, String> memnode : memNodes) {
                 writer.writeStartElement("memnode");
-                writer.writeAttributeString("mode", mode);
-                writer.writeAttributeString("cellid", (String) memnode.get(VdsProperties.NUMA_TUNE_VM_NODE_INDEX));
-                writer.writeAttributeString("nodeset", (String) memnode.get(VdsProperties.NUMA_TUNE_NODESET));
+                writer.writeAttributeString("mode", memnode.get(VdsProperties.NUMA_TUNE_MODE));
+                writer.writeAttributeString("cellid", memnode.get(VdsProperties.NUMA_TUNE_VM_NODE_INDEX));
+                writer.writeAttributeString("nodeset", memnode.get(VdsProperties.NUMA_TUNE_NODESET));
                 writer.writeEndElement();
             }
 
@@ -654,10 +677,10 @@ public class LibvirtVmXmlBuilder {
             writer.writeEndElement();
         }
 
-        if (vm.getEffectiveBiosType().isOvmf()) {
+        if (vm.getBiosType().isOvmf()) {
             writer.writeStartElement("loader");
             writer.writeAttributeString("readonly", "yes");
-            boolean secureBoot = vm.getEffectiveBiosType() == BiosType.Q35_SECURE_BOOT;
+            boolean secureBoot = vm.getBiosType() == BiosType.Q35_SECURE_BOOT;
             writer.writeAttributeString("secure", secureBoot ? "yes" : "no");
             writer.writeAttributeString("type", "pflash");
             writer.writeRaw("/usr/share/OVMF/OVMF_CODE.secboot.fd");
@@ -725,7 +748,7 @@ public class LibvirtVmXmlBuilder {
             writer.writeAttributeString("present", "no");
             writer.writeEndElement();
         }
-        if (vm.getUseTscFrequency()) {
+        if (vm.getUseTscFrequency() && tscFrequencySupplier.get() != null) {
             writer.writeStartElement("timer");
             writer.writeAttributeString("name", "tsc");
             writer.writeAttributeString("frequency", tscFrequencySupplier.get());
@@ -743,7 +766,7 @@ public class LibvirtVmXmlBuilder {
 
         boolean acpiEnabled = vm.getAcpiEnable();
         boolean kaslrEnabled = vmInfoBuildUtils.isKASLRDumpEnabled(vm.getVmOsId());
-        boolean secureBootEnabled = vm.getEffectiveBiosType() == BiosType.Q35_SECURE_BOOT;
+        boolean secureBootEnabled = vm.getBiosType() == BiosType.Q35_SECURE_BOOT;
         if (!acpiEnabled && !hypervEnabled && !kaslrEnabled && !secureBootEnabled) {
             return;
         }
@@ -819,6 +842,12 @@ public class LibvirtVmXmlBuilder {
             writer.writeEndElement();
         }
 
+        if (VmInfoBuildUtils.isVmWithHighNumberOfX86Vcpus(vm)) {
+            writer.writeStartElement("ioapic");
+            writer.writeAttributeString("driver", "qemu");
+            writer.writeEndElement();
+        }
+
         writer.writeEndElement();
     }
 
@@ -863,9 +892,13 @@ public class LibvirtVmXmlBuilder {
     }
 
     private void writeNetworkInterfaceMetadata() {
-        vnicMetadata.forEach((mac, data) -> {
+        vnicMetadata.forEach((alias, data) -> {
             writer.writeStartElement(OVIRT_VM_URI, "device");
-            writer.writeAttributeString("mac_address", mac);
+            writer.writeAttributeString("alias", alias);
+            var mac = (String) data.remove("mac");
+            if (mac != null) {
+                writer.writeAttributeString("mac_address", mac);
+            }
             List<String> portMirroring = (List<String>) data.remove("portMirroring");
             if (portMirroring != null) {
                 writer.writeStartElement(OVIRT_VM_URI, "portMirroring");
@@ -935,6 +968,7 @@ public class LibvirtVmXmlBuilder {
         writeRunAndPauseMetadata();
         writePayloadMetadata();
         writeResumeBehaviorMetadata();
+        writeBalloonMetadata();
         writer.writeEndElement();
     }
 
@@ -976,6 +1010,10 @@ public class LibvirtVmXmlBuilder {
         writer.writeEndElement();
     }
 
+    private void writeBalloonMetadata() {
+        writer.writeElement(OVIRT_VM_URI, "ballooningEnabled", String.valueOf(vm.isBalloonEnabled()));
+    }
+
     private void writePowerEvents() {
         if (volatileRun) {
             writer.writeElement("on_reboot", "destroy");
@@ -990,13 +1028,20 @@ public class LibvirtVmXmlBuilder {
         devices = processPayload(devices);
         devices.stream().filter(d -> d.getSpecParams() == null).forEach(d -> d.setSpecParams(Collections.emptyMap()));
         ArchStrategyFactory.getStrategy(vm.getClusterArch()).run(new CreateAdditionalControllersForDomainXml(devices));
+        Map<Integer, Map<VmDevice, Integer>> vmDeviceVirtioScsiUnitMap = vmInfoBuildUtils.getVmDeviceUnitMapForVirtioScsiDisks(vm);
 
         writer.writeStartElement("devices");
 
-        if (vm.getClusterArch() != ArchitectureType.s390x &&
-            !(vm.getClusterArch().getFamily() == ArchitectureType.ppc && vm.getVmType() == VmType.HighPerformance)) {
-            // no mouse or tablet for s390x and for HP VMS with ppc architecture type
+        switch(vm.getClusterArch().getFamily()) {
+        // No mouse or tablet for s390x and for headless HP VMS with ppc architecture type.
+        case x86:
             writeInput();
+            break;
+        case ppc:
+            if (vmInfoBuildUtils.hasUsbController(vm)) {
+                writeInput();
+                break;
+            }
         }
 
         writeGuestAgentChannels();
@@ -1004,6 +1049,8 @@ public class LibvirtVmXmlBuilder {
         if (vm.getClusterArch() == ArchitectureType.ppc64 || vm.getClusterArch() == ArchitectureType.ppc64le) {
             writeEmulator();
         }
+
+        writeIommu();
 
         Map<DiskInterface, Integer> controllerIndexMap =
                 ArchStrategyFactory.getStrategy(vm.getClusterArch()).run(new GetControllerIndices()).returnValue();
@@ -1028,6 +1075,9 @@ public class LibvirtVmXmlBuilder {
             switch (device.getType()) {
             case BALLOON:
                 balloonExists = true;
+                if (legacyVirtio) {
+                    device.getSpecParams().put("model", "virtio-transitional");
+                }
                 writeBalloon(device);
                 break;
             case SMARTCARD:
@@ -1046,29 +1096,36 @@ public class LibvirtVmXmlBuilder {
             case CONTROLLER:
                 switch(device.getDevice()) {
                 case "usb":
-                    if (device.getSpecParams().get("model") != null &&
-                            device.getSpecParams().get("model").equals("qemu-xhci")) {
+                    if ("qemu-xhci".equals(device.getSpecParams().get("model"))) {
                         device.getSpecParams().put("ports", 8);
                     }
                     break;
                 case "virtio-serial":
                     device.getSpecParams().put("index", 0);
                     device.getSpecParams().put("ports", 16);
+                    if (legacyVirtio) {
+                        device.getSpecParams().put("model", "virtio-transitional");
+                    }
                     break;
                 case "virtio-scsi":
                     device.setDevice(VdsProperties.Scsi);
                     device.getSpecParams().put("index", virtioScsiIndex++);
-                    device.getSpecParams().put("model", "virtio-scsi");
+                    if (legacyVirtio) {
+                        device.getSpecParams().put("model", "virtio-transitional");
+                    } else {
+                        device.getSpecParams().put("model", "virtio-scsi");
+                    }
                     break;
                 case "pci":
-                    if ("pcie-root".equals(device.getSpecParams().get("model"))) {
+                    Object model = device.getSpecParams().get("model");
+                    if ("pcie-root".equals(model)) {
                         pciERootExists = true;
-                    } else if ("pcie-root-port".equals(device.getSpecParams().get("model"))) {
+                    } else if ("pcie-root-port".equals(model)) {
                         pciEPorts++;
                     }
                     break;
                 }
-                writeController(device);
+                writeController(device, vmDeviceVirtioScsiUnitMap);
                 break;
             case GRAPHICS:
                 writeGraphics(device);
@@ -1079,6 +1136,9 @@ public class LibvirtVmXmlBuilder {
                 break;
             case RNG:
                 writeRng(device);
+                break;
+            case TPM:
+                writeTpm(device);
                 break;
             case CONSOLE:
                 writeConsole(device);
@@ -1150,7 +1210,7 @@ public class LibvirtVmXmlBuilder {
         }
 
         if (vm.getClusterArch().getFamily() == ArchitectureType.x86
-                && vm.getEffectiveBiosType().getChipsetType() == ChipsetType.Q35) {
+                && vm.getBiosType().getChipsetType() == ChipsetType.Q35) {
             writePciEControllers(pciERootExists, pciEPorts);
         }
 
@@ -1160,7 +1220,7 @@ public class LibvirtVmXmlBuilder {
         writeCdRom(cdromDevices);
         writeFloppy(floppyDevice);
         // we must write the disk after writing cd-rom and floppy to know reserved indices
-        writeDisks(diskDevices);
+        writeDisks(diskDevices, vmDeviceVirtioScsiUnitMap);
         writeHostdevDisks(hostDevDisks);
         writeLeases();
 
@@ -1241,61 +1301,49 @@ public class LibvirtVmXmlBuilder {
                 VmDeviceCommonUtils.extractDiskVmElements(vm));
     }
 
-    boolean isMdevDisplayOn(Map<String, String> vmCustomProperties, VM vm) {
-        String mdevTypes = vmCustomProperties.get("mdev_type");
-        if (mdevTypes == null) {
-            return false;
-        }
-        String[] mdevDevices = mdevTypes.split(",");
-        boolean hasNoDisplay = mdevDevices.length > 0 && mdevDevices[0].equals("nodisplay");
-
-        return vm.getCompatibilityVersion().greaterOrEquals(Version.v4_3) && !hasNoDisplay;
-    }
-
     void writeVGpu() {
-        String mdevTypes = vmCustomProperties.remove("mdev_type");
-        if (StringUtils.isNotEmpty(mdevTypes)) {
-            String[] mdevDevices = mdevTypes.split(",");
-            if (mdevDevices.length > 0 && mdevDevices[0].equals("nodisplay")) {
-                mdevDevices = Arrays.copyOfRange(mdevDevices, 1, mdevDevices.length);
-            }
-            for (String mdevType : mdevDevices) {
-                writer.writeStartElement("hostdev");
-                writer.writeAttributeString("mode", "subsystem");
-                writer.writeAttributeString("type", "mdev");
-                writer.writeAttributeString("model", "vfio-pci");
-                if (mdevDisplayOn) {
-                    // Nvidia vGPU VNC console is only supported on RHEL >= 7.6
-                    // See https://bugzilla.redhat.com/show_bug.cgi?id=1633623 for details and discussion
-                    writer.writeAttributeString("display", "on");
+        for (String mdevType : MDevTypesUtils.getMDevTypes(vm)) {
+            writer.writeStartElement("hostdev");
+            writer.writeAttributeString("mode", "subsystem");
+            writer.writeAttributeString("type", "mdev");
+            writer.writeAttributeString("model", "vfio-pci");
+            if (mdevDisplayOn) {
+                // Nvidia vGPU VNC console is only supported on RHEL >= 7.6
+                // See https://bugzilla.redhat.com/show_bug.cgi?id=1633623 for details and discussion
+                writer.writeAttributeString("display", "on");
+                if (FeatureSupported.isVgpuFramebufferSupported(vm.getCompatibilityVersion())) {
+                    writer.writeAttributeString("ramfb", "on");
                 }
-
-                writer.writeStartElement("source");
-                String address = Guid.newGuid().toString();
-                writer.writeStartElement("address");
-                writer.writeAttributeString("uuid", address);
-                writer.writeEndElement();
-                writer.writeEndElement();
-
-                writer.writeEndElement();
-
-                String mdevTypeMeta = mdevType;
-                if (FeatureSupported.isVgpuPlacementSupported(vm.getCompatibilityVersion())) {
-                    VgpuPlacement vgpuPlacement = hostVgpuPlacementSupplier.get();
-                    String vgpuPlacementString;
-                    if (vgpuPlacement == VgpuPlacement.CONSOLIDATED) {
-                        vgpuPlacementString = "compact";
-                    } else if (vgpuPlacement == VgpuPlacement.SEPARATED) {
-                        vgpuPlacementString = "separate";
-                    } else {
-                        log.warn("Unrecognized vGPU placement type (using `{}' instead): {}",
-                                 VgpuPlacement.CONSOLIDATED, vgpuPlacement);
-                        vgpuPlacementString = "compact";
-                    }
-                    mdevTypeMeta = mdevTypeMeta + "|" + vgpuPlacementString;
-                }
-                mdevMetadata.put(address, Collections.singletonMap("mdevType", mdevTypeMeta));
             }
+
+            writer.writeStartElement("source");
+            String address = Guid.newGuid().toString();
+            writer.writeStartElement("address");
+            writer.writeAttributeString("uuid", address);
+            writer.writeEndElement();
+            writer.writeEndElement();
+
+            writer.writeEndElement();
+
+            String mdevTypeMeta = mdevType;
+            if (FeatureSupported.isVgpuPlacementSupported(vm.getCompatibilityVersion())) {
+                VgpuPlacement vgpuPlacement = hostVgpuPlacementSupplier.get();
+                String vgpuPlacementString;
+                if (vgpuPlacement == VgpuPlacement.CONSOLIDATED) {
+                    vgpuPlacementString = "compact";
+                } else if (vgpuPlacement == VgpuPlacement.SEPARATED) {
+                    vgpuPlacementString = "separate";
+                } else {
+                    log.warn("Unrecognized vGPU placement type (using `{}' instead): {}",
+                            VgpuPlacement.CONSOLIDATED,
+                            vgpuPlacement);
+                    vgpuPlacementString = "compact";
+                }
+                mdevTypeMeta = mdevTypeMeta + "|" + vgpuPlacementString;
+            }
+            // removing from custom properties since it will be processed separately
+            vmCustomProperties.remove("mdev_type");
+            mdevMetadata.put(address, Collections.singletonMap("mdevType", mdevTypeMeta));
         }
     }
 
@@ -1342,16 +1390,33 @@ public class LibvirtVmXmlBuilder {
     private void writeInterfaces(List<VmDevice> devices) {
         Map<VmDeviceId, VmNetworkInterface> devIdToNic = vm.getInterfaces().stream()
                 .collect(Collectors.toMap(nic -> new VmDeviceId(nic.getId(), nic.getVmId()), nic -> nic));
+        Map<Guid, VnicProfile> vnicProfilesById = Entities.businessEntitiesById(vmInfoBuildUtils.getAllVnicProfiles());
+
         devices.stream()
                 .sorted(Comparator.comparing(dev -> devIdToNic.get(dev.getId()).getMacAddress()))
-                .forEach(dev -> writeInterface(dev, devIdToNic.get(dev.getId())));
+                .forEach(dev -> {
+                            var nic = devIdToNic.get(dev.getId());
+                            writeInterface(dev, nic);
+
+                            var vnicProfile = vnicProfilesById.get(nic.getVnicProfileId());
+                            if (vnicProfile != null && vnicProfile.getFailoverVnicProfileId() != null) {
+                                writeFailoverInterface(vnicProfile.getFailoverVnicProfileId(), nic.getMacAddress());
+                            }
+                        }
+                );
+
     }
 
-    private void writeDisks(List<VmDevice> devices) {
+    private void writeFailoverInterface(Guid failoverId, String macAddress) {
+        var failoverDevice = VmDeviceCommonUtils.createFailoverVmDevice(failoverId, vm.getId());
+        var failoverNic = VmDeviceCommonUtils.createFailoverVmNic(failoverId, vm.getId(), macAddress);
+        writeInterface(failoverDevice, failoverNic);
+    }
+
+    private void writeDisks(List<VmDevice> devices, Map<Integer, Map<VmDevice, Integer>> vmDeviceVirtioScsiUnitMap) {
         Map<VmDeviceId, VmDevice> deviceIdToDevice = devices.stream()
                 .collect(Collectors.toMap(VmDevice::getId, dev -> dev));
         Map<Integer, Map<VmDevice, Integer>> vmDeviceSpaprVscsiUnitMap = vmInfoBuildUtils.getVmDeviceUnitMapForSpaprScsiDisks(vm);
-        Map<Integer, Map<VmDevice, Integer>> vmDeviceVirtioScsiUnitMap = vmInfoBuildUtils.getVmDeviceUnitMapForVirtioScsiDisks(vm);
         int hdIndex = -1;
         sdIndex = -1;
         int vdIndex = -1;
@@ -1443,6 +1508,18 @@ public class LibvirtVmXmlBuilder {
         writer.writeEndElement();
     }
 
+    private void writeIommu() {
+        if (VmInfoBuildUtils.isVmWithHighNumberOfX86Vcpus(vm)) {
+            writer.writeStartElement("iommu");
+            writer.writeAttributeString("model", "intel");
+            writer.writeStartElement("driver");
+            writer.writeAttributeString("intremap", "on");
+            writer.writeAttributeString("eim", "on");
+            writer.writeEndElement();
+            writer.writeEndElement();
+        }
+    }
+
     private void writeSpiceVmcChannel() {
         writer.writeStartElement("channel");
         writer.writeAttributeString("type", "spicevmc");
@@ -1460,20 +1537,22 @@ public class LibvirtVmXmlBuilder {
         //   <target type='virtio' name='org.linux-kvm.port.0'/>
         //   <source mode='bind' path='/tmp/socket'/>
         // </channel>
-        writer.writeStartElement("channel");
-        writer.writeAttributeString("type", "unix");
+        if (vmInfoBuildUtils.isOvirtGuestAgent(vm.getVmOsId())) {
+            writer.writeStartElement("channel");
+            writer.writeAttributeString("type", "unix");
 
-        writer.writeStartElement("target");
-        writer.writeAttributeString("type", "virtio");
-        writer.writeAttributeString("name", "ovirt-guest-agent.0");
-        writer.writeEndElement();
+            writer.writeStartElement("target");
+            writer.writeAttributeString("type", "virtio");
+            writer.writeAttributeString("name", "ovirt-guest-agent.0");
+            writer.writeEndElement();
 
-        writer.writeStartElement("source");
-        writer.writeAttributeString("mode", "bind");
-        writer.writeAttributeString("path", String.format("/var/lib/libvirt/qemu/channels/%s.ovirt-guest-agent.0", vm.getId()));
-        writer.writeEndElement();
+            writer.writeStartElement("source");
+            writer.writeAttributeString("mode", "bind");
+            writer.writeAttributeString("path", String.format("/var/lib/libvirt/qemu/channels/%s.ovirt-guest-agent.0", vm.getId()));
+            writer.writeEndElement();
 
-        writer.writeEndElement();
+            writer.writeEndElement();
+        }
 
         writer.writeStartElement("channel");
         writer.writeAttributeString("type", "unix");
@@ -1540,11 +1619,14 @@ public class LibvirtVmXmlBuilder {
             writeUsbHostDevice(new VmHostDevice(device), hostDevice);
             break;
         case "scsi":
-            if (scsiHostDevDrivers.contains(vmCustomProperties.get("scsi_hostdev"))) {
+            if (SCSI_HOST_DEV_DRIVERS.contains(vmCustomProperties.get("scsi_hostdev"))) {
                 hostDevDisks.add(new Pair<>(device, hostDevice));
             } else {
                 writeScsiHostDevice(new VmHostDevice(device), hostDevice);
             }
+            break;
+        case "nvdimm":
+            writeNvdimmHostDevice(new VmHostDevice(device), hostDevice);
             break;
         default:
             log.warn("Skipping host device: {}", device.getDevice());
@@ -1560,7 +1642,8 @@ public class LibvirtVmXmlBuilder {
         );
 
         for (Pair<VmDevice, HostDevice> pair : hostDevDisks) {
-            String diskName = vmInfoBuildUtils.makeDiskName("scsi", ++sdIndex);
+            sdIndex = skipCdIndices(++sdIndex, DiskInterface.VirtIO_SCSI);
+            String diskName = vmInfoBuildUtils.makeDiskName("scsi", sdIndex);
 
             writeScsiHostDevAsDisk(new VmHostDevice(pair.getFirst()), pair.getSecond(), diskName);
         }
@@ -1571,6 +1654,13 @@ public class LibvirtVmXmlBuilder {
 
         writer.writeStartElement("disk");
         writer.writeAttributeString("type", "block");
+        // Adding snapshot='no' attribute to prevent libvirt from adding this disk from the domxml. This will prevent
+        // libvirt from selecting this disk as a target to snapshot. Snapshots of passthrough disks are not allowed.
+        writer.writeAttributeString("snapshot", "no");
+
+        if (SCSI_VIRTIO_BLK_PCI.equals(scsiHostdevProperty) && legacyVirtio) {
+            writer.writeAttributeString("model", "virtio-transitional");
+        }
         if (SCSI_BLOCK.equals(scsiHostdevProperty)) {
             writer.writeAttributeString("device", "lun");
             writer.writeAttributeString("rawio", "yes");
@@ -1722,6 +1812,74 @@ public class LibvirtVmXmlBuilder {
         writer.writeEndElement();
     }
 
+    private void writeNvdimmHostDevice(VmHostDevice device, HostDevice hostDevice) {
+        Map<String, Object> specParams = hostDevice.getSpecParams();
+        String mode = (String)specParams.get(VdsProperties.MODE);
+        String numaNode = (String)specParams.get(VdsProperties.NUMA_NODE);
+        String targetNode = vmInfoBuildUtils.getMatchingNumaNode(getNumaTuneSetting(), vmNumaNodesSupplier, numaNode);
+        if (targetNode == null) {
+            log.error("No NUMA node, cannot add NVDIMM devices");
+            return;
+        }
+        Long alignSize = (Long)specParams.get(VdsProperties.ALIGN_SIZE);
+        if (alignSize == null) {
+            // If we didn't specify alignsize, libvirt would select one based on memory page size.
+            // Better to set it ourselves, to the memory block size.
+            // See also VmInfoBuildUtils::getNvdimmAlignedSize().
+            alignSize = new Long(vm.getClusterArch().getHotplugMemorySizeFactorMb() * 1024 * 1024);
+        }
+        Long size = vmInfoBuildUtils.getNvdimmAlignedSize(vm, hostDevice);
+        if (size == null) {
+            log.error("Invalid alignment, cannot add NVDIMM device");
+            return;
+        }
+
+        // <memory model='nvdimm' access='shared'>
+        //   <source>
+        //     <path>/dev/pmem0</path>
+        //     <alignsize unit='KiB'>2048</alignsize>
+        //     <pmem/>
+        //   </source>
+        //   <target>
+        //     <size unit='KiB'>16646144</size>
+        //     <node>0</node>
+        //     <label>
+        //       <size unit='KiB'>128</size>
+        //     </label>
+        //   </target>
+        //   <alias name="ua-1234"/>
+        // </memory>
+        writer.writeStartElement("memory");
+        writer.writeAttributeString("model", "nvdimm");
+        writer.writeAttributeString("access", "shared");
+
+        writer.writeStartElement("source");
+        writer.writeElement("path", (String)specParams.get(VdsProperties.DEVICE_PATH));
+        writer.writeStartElement("alignsize");
+        writer.writeAttributeString("unit", "KiB");
+        writer.writeRaw(String.valueOf(alignSize / 1024));
+        writer.writeEndElement();  // alignsize
+        writer.writeElement("pmem");
+        writer.writeEndElement();  // source
+
+        writer.writeStartElement("target");
+        writer.writeStartElement("size");
+        writer.writeAttributeString("unit", "KiB");
+        writer.writeRaw(String.valueOf(size / 1024));
+        writer.writeEndElement();  // size
+        writer.writeElement("node", targetNode);
+        writer.writeStartElement("label");
+        writer.writeStartElement("size");
+        writer.writeAttributeString("unit", "KiB");
+        writer.writeRaw(String.valueOf(VmInfoBuildUtils.NVDIMM_LABEL_SIZE / 1024));
+        writer.writeEndElement();  // size
+        writer.writeEndElement();  // label
+        writer.writeEndElement();  // target
+
+        writeAlias(device);
+        writer.writeEndElement();  // memory
+    }
+
     private void writeRedir(VmDevice device) {
         // <redirdev bus='usb' type='spicevmc'>
         //   <address type='usb' bus='0' port='1'/>
@@ -1740,7 +1898,11 @@ public class LibvirtVmXmlBuilder {
         //   <backend model='random'>/dev/random</backend>
         // </rng>
         writer.writeStartElement("rng");
-        writer.writeAttributeString("model", "virtio");
+        if (legacyVirtio) {
+            writer.writeAttributeString("model", "virtio-transitional");
+        } else {
+            writer.writeAttributeString("model", "virtio");
+        }
 
         Map<String, Object> specParams = device.getSpecParams();
         if (specParams.containsKey("bytes")) {
@@ -1768,6 +1930,19 @@ public class LibvirtVmXmlBuilder {
         writer.writeEndElement();
 
         writeAlias(device);
+        writer.writeEndElement();
+    }
+
+    private void writeTpm(VmDevice device) {
+        writer.writeStartElement("tpm");
+        if (vm.getClusterArch().getFamily() == ArchitectureType.x86) {
+            writer.writeAttributeString("model", "tpm-crb");
+        }
+        writeAlias(device);
+        writer.writeStartElement("backend");
+        writer.writeAttributeString("type", "emulator");
+        writer.writeAttributeString("version", "2.0");
+        writer.writeEndElement();
         writer.writeEndElement();
     }
 
@@ -1802,9 +1977,8 @@ public class LibvirtVmXmlBuilder {
         writer.writeAttributeString("port", String.valueOf(LIBVIRT_PORT_AUTOSELECT));
         writer.writeAttributeString("autoport", "yes");
         // TODO: defaultMode
-        if (graphicsType == GraphicsType.SPICE      // SPICE always needs password
-            || hostStatisticsSupplier.get() == null // when there's no host, it doesn't matter; use password to be safe
-            || !vmInfoBuildUtils.isKernelFipsMode(hostStatisticsSupplier.get().getId())) {
+        if (graphicsType == GraphicsType.SPICE  // SPICE always needs password
+                || !kernelFipsModeSupplier.get()) {
             writer.writeAttributeString("passwd", "*****");
             writer.writeAttributeString("passwdValidTo", "1970-01-01T00:00:01");
         }
@@ -1903,7 +2077,7 @@ public class LibvirtVmXmlBuilder {
         }
     }
 
-    private void writeController(VmDevice device) {
+    private void writeController(VmDevice device, Map<Integer, Map<VmDevice, Integer>> vmDeviceVirtioScsiUnitMap) {
         writer.writeStartElement("controller");
         writer.writeAttributeString("type", device.getDevice());
 
@@ -1920,9 +2094,26 @@ public class LibvirtVmXmlBuilder {
             writer.writeAttributeString("ports", ports.toString());
         }
         Object ioThreadId = device.getSpecParams().get(VdsProperties.ioThreadId);
-        if (ioThreadId != null) {
+
+        // Add multiple queues support to the virtio-scsi controller
+        String queues = null;
+
+        if ("virtio-scsi".equals(model) && vm.isVirtioScsiMultiQueuesEnabled()) {
+            int numOfDisks = 0;
+            if (index != null && vmDeviceVirtioScsiUnitMap.containsKey(index)) {
+                numOfDisks = vmDeviceVirtioScsiUnitMap.get(index).size();
+            }
+            queues = String.valueOf(vmInfoBuildUtils.getNumOfScsiQueues(numOfDisks, vm.getNumOfCpus()));
+        }
+
+        if (ioThreadId != null || queues != null) {
             writer.writeStartElement("driver");
-            writer.writeAttributeString("iothread", ioThreadId.toString());
+            if (queues != null) {
+                writer.writeAttributeString("queues", queues);
+            }
+            if (ioThreadId != null) {
+                writer.writeAttributeString("iothread", ioThreadId.toString());
+            }
             writer.writeEndElement();
         }
 
@@ -1958,7 +2149,7 @@ public class LibvirtVmXmlBuilder {
         writeAddress(device);
         writeBootOrder(device.getBootOrder());
 
-        if (disk.getDiskStorageType() != DiskStorageType.LUN) {
+        if (disk.getDiskStorageType() != DiskStorageType.LUN || !disk.isScsiPassthrough()) {
             writer.writeElement("serial", disk.getId().toString());
         }
 
@@ -2043,7 +2234,16 @@ public class LibvirtVmXmlBuilder {
         if (pinTo > 0) {
             writer.writeAttributeString("iothread", String.valueOf(pinTo));
         }
-
+        /**
+        When the disk propagate error is set to On, we need to ensure that the proper
+        error policy is set.
+        For IMAGE, we need to use enospace since image may be thin provisioned and requires
+        handling of enospace in vdsm. Using report will break the thin provisioning.
+        For LUN and Cinder, enospace is incorrect since the system cannot handle this value. This
+        must be handled by the guest. For these reasons, report is the right value.
+        Here is link to the thread in Ovirt Development -
+        https://lists.ovirt.org/archives/list/devel@ovirt.org/thread/YY56B5LCNO6ROSUPDWWHGKGUQVOLHCAR/
+        **/
         boolean nativeIO = false;
         switch (disk.getDiskStorageType()) {
         case IMAGE:
@@ -2058,14 +2258,14 @@ public class LibvirtVmXmlBuilder {
             nativeIO = true;
             writer.writeAttributeString("io", "native");
             writer.writeAttributeString("type", "raw");
-            writer.writeAttributeString("error_policy", disk.getPropagateErrors() == PropagateErrors.On ? "enospace" : "stop");
+            writer.writeAttributeString("error_policy", disk.getPropagateErrors() == PropagateErrors.On ? "report" : "stop");
             break;
 
         case CINDER:
             // case RBD
             writer.writeAttributeString("io", "threads");
             writer.writeAttributeString("type", "raw");
-            writer.writeAttributeString("error_policy", "stop");
+            writer.writeAttributeString("error_policy", disk.getPropagateErrors() == PropagateErrors.On ? "report" : "stop");
             break;
         }
 
@@ -2198,7 +2398,10 @@ public class LibvirtVmXmlBuilder {
             } else if (managedBlockStorageDisk.getCinderVolumeDriver() == CinderVolumeDriver.BLOCK) {
                 Map<String, Object> attachment =
                         (Map<String, Object>) managedBlockStorageDisk.getDevice().get(DeviceInfoReturn.ATTACHMENT);
-                metadata = Collections.singletonMap("GUID", (String)attachment.get(DeviceInfoReturn.SCSI_WWN));
+                metadata = Map.of(
+                        "GUID", (String)attachment.get(DeviceInfoReturn.SCSI_WWN),
+                        "managed", "true"
+                );
             }
 
             writer.writeAttributeString("dev", path);
@@ -2260,7 +2463,14 @@ public class LibvirtVmXmlBuilder {
     }
 
     private void writeGeneralDiskAttributes(VmDevice device, Disk disk, DiskVmElement dve) {
+        // Adding snapshot='no' attribute to prevent from libvirt adding this disk from the domxml. This will prevent
+        // libvirt from selecting this disk as a target to snapshot. When we do execute snapshot, we specify the disks
+        // we wish to take a snapshot for explicitly.
         writer.writeAttributeString("snapshot", "no");
+
+        if (dve.getDiskInterface() == DiskInterface.VirtIO && legacyVirtio) {
+            writer.writeAttributeString("model", "virtio-transitional");
+        }
 
         switch (disk.getDiskStorageType()) {
         case IMAGE:
@@ -2413,7 +2623,9 @@ public class LibvirtVmXmlBuilder {
 
             writer.writeStartElement("source");
             writer.writeAttributeString(isoOnBlockDomain ? "dev" : "file", cdPath);
-            writer.writeAttributeString("startupPolicy", "optional");
+            if (!isoOnBlockDomain) {
+                writer.writeAttributeString("startupPolicy", "optional");
+            }
             writeSeclabel();
             writer.writeEndElement();
 
@@ -2474,6 +2686,11 @@ public class LibvirtVmXmlBuilder {
         VnicProfile vnicProfile = vmInfoBuildUtils.getVnicProfile(nic.getVnicProfileId());
         Network network = vnicProfile != null ? vmInfoBuildUtils.getNetwork(vnicProfile.getNetworkId()) : null;
         boolean networkless = network == null;
+        boolean hasFailover = vnicProfile != null && vnicProfile.getFailoverVnicProfileId() != null;
+
+        String alias = generateUserAliasForDevice(device);
+        vnicMetadata.computeIfAbsent(alias, a -> new HashMap<>());
+        vnicMetadata.get(alias).put("mac", nic.getMacAddress());
 
         switch (device.getDevice()) {
         case "bridge":
@@ -2485,6 +2702,9 @@ public class LibvirtVmXmlBuilder {
             String evaluatedIfaceType = vmInfoBuildUtils.evaluateInterfaceType(ifaceType, vm.getHasAgent());
             if ("pv".equals(evaluatedIfaceType)) {
                 evaluatedIfaceType = "virtio";
+                if (legacyVirtio) {
+                    evaluatedIfaceType = "virtio-transitional";
+                }
             }
             writer.writeAttributeString("type", evaluatedIfaceType);
             writer.writeEndElement();
@@ -2497,6 +2717,12 @@ public class LibvirtVmXmlBuilder {
             writer.writeStartElement("source");
             writer.writeAttributeString("bridge", !networkless ? network.getVdsmName() : ";vdsmdummy;");
             writer.writeEndElement();
+
+            if (!networkless && network.isPortIsolation()) {
+                writer.writeStartElement("port");
+                writer.writeAttributeString("isolated", "yes");
+                writer.writeEndElement();
+            }
 
             String queues = null;
             if (vnicProfile != null) {
@@ -2518,6 +2744,12 @@ public class LibvirtVmXmlBuilder {
                     }
                 }
                 writer.writeAttributeString("name", driverName);
+                writer.writeEndElement();
+            }
+
+            if (vnicProfile != null && device.getCustomProperties().remove("failover") != null) {
+                writer.writeStartElement("teaming");
+                writer.writeAttributeString("type", "persistent");
                 writer.writeEndElement();
             }
 
@@ -2544,6 +2776,13 @@ public class LibvirtVmXmlBuilder {
             sourceAddress.forEach(writer::writeAttributeString);
             writer.writeEndElement();
             writer.writeEndElement();
+            if (hasFailover) {
+                writer.writeStartElement("teaming");
+                writer.writeAttributeString("type", "transient");
+                writer.writeAttributeString("persistent",
+                        String.format("ua-%s", vnicProfile.getFailoverVnicProfileId()));
+                writer.writeEndElement();
+            }
             break;
         }
 
@@ -2590,20 +2829,17 @@ public class LibvirtVmXmlBuilder {
         List<String> portMirroring = (List<String>) profileData.get(VdsProperties.PORT_MIRRORING);
         if (portMirroring != null && !portMirroring.isEmpty()) {
             // store port mirroring in the metadata
-            vnicMetadata.computeIfAbsent(nic.getMacAddress(), mac -> new HashMap<>());
-            vnicMetadata.get(nic.getMacAddress()).put("portMirroring", portMirroring);
+            vnicMetadata.get(alias).put("portMirroring", portMirroring);
         }
 
         Map<String, String> runtimeCustomProperties = vm.getRuntimeDeviceCustomProperties().get(device.getId());
         if (runtimeCustomProperties != null && !runtimeCustomProperties.isEmpty()) {
             // store runtime custom properties in the metadata
-            vnicMetadata.computeIfAbsent(nic.getMacAddress(), mac -> new HashMap<>());
-            vnicMetadata.get(nic.getMacAddress()).put("runtimeCustomProperties", runtimeCustomProperties);
+            vnicMetadata.get(alias).put("runtimeCustomProperties", runtimeCustomProperties);
         }
 
         if (vnicProfile != null && vnicProfile.getCustomProperties() != null) {
-            vnicMetadata.computeIfAbsent(nic.getMacAddress(), mac -> new HashMap<>());
-            vnicMetadata.get(nic.getMacAddress()).putAll(vnicProfile.getCustomProperties());
+            vnicMetadata.get(alias).putAll(vnicProfile.getCustomProperties());
         }
 
         writer.writeStartElement("bandwidth");
